<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/common_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <include
                android:id="@+id/common_title_2"
                layout="@layout/common_header" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/goodslist_orderby"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_below="@+id/common_title"
            android:background="@drawable/goods_list_sort_bg"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/goodslist_orderby_sales"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/goodslist_orderby_sales_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sales"
                    android:textColor="@color/light"
                    android:textSize="@dimen/goods_list_sort_font_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/goodslist_orderby_grade"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/goodslist_orderby_grade_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/grade"
                    android:textColor="@color/light"
                    android:textSize="@dimen/goods_list_sort_font_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/goodslist_orderby_price"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/goodslist_orderby_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/price"
                    android:textColor="@color/light"
                    android:textSize="@dimen/goods_list_sort_font_size" />

                <ImageView
                    android:id="@+id/goodslist_orderby_price_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5.0dip"
                    android:layout_toRightOf="@id/goodslist_orderby_price_text"
                    android:contentDescription="价格"
                    android:src="@drawable/sort_button_price_none" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/goodslist_orderby_newgoods"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/goodslist_orderby_newgoods_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/newgoods"
                    android:textColor="@color/light"
                    android:textSize="@dimen/goods_list_sort_font_size" />
            </RelativeLayout>
        </LinearLayout>

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/goodslist_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/goodslist_orderby"
            android:layout_marginTop="1.0dip"
            android:cacheColorHint="#00000000"
            android:divider="@color/divgray"
            android:dividerHeight="1.0dip"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:smoothScrollbar="true" />

        <TextView
            android:id="@+id/goodslist_nodata"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/goodslist_orderby"
            android:gravity="center"
            android:text="@string/nodata"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>