<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffeeeeee" >

    <!-- 标题 -->

    <RelativeLayout
        android:id="@+id/common_title"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@drawable/common_title_background" >

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15.0dip"
            android:paddingRight="5.0dip"
            android:src="@drawable/common_title_back_selector" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxWidth="180.0dip"
            android:singleLine="true"
            android:text="@string/goods_detail"
            android:textColor="@color/common_title_text_color"
            android:textSize="17.0sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/product_detail_info_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/common_title"
        android:background="@drawable/pd_content" >

        <RelativeLayout
            android:id="@+id/goods_detail_tab"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_alignParentTop="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:paddingTop="5dip" >

                <RelativeLayout
                    android:id="@+id/goods_intro"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/goods_intro"
                        android:textColor="@color/pd_black68_red"
                        android:textSize="14.0sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/pd_info_up_selector" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/goods_attr"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/goods_attr"
                        android:textColor="@color/pd_black68_red"
                        android:textSize="14.0sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/pd_info_up_selector" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <WebView
            android:id="@+id/webview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/linearLayout1"
            android:layout_below="@id/goods_detail_tab" />
    </RelativeLayout>

</RelativeLayout>