<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/color_f3f5f7">

    <!--<include layout="@layout/resize_layout" />-->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/common_title_background">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:src="@drawable/common_title_back_selector" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="30.0dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2.0dip"
            android:layout_marginRight="12.0dip"
            android:layout_toLeftOf="@+id/search_btn"
            android:layout_toRightOf="@id/title_back"
            android:background="@drawable/b_input">

            <ImageView
                android:id="@+id/search_title_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="13.0dip"
                android:src="@drawable/icon_search" />

            <AutoCompleteTextView
                android:id="@+id/search_keyword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5.0dip"
                android:layout_toRightOf="@id/search_title_icon"
                android:background="@color/transparent"
                android:completionThreshold="1"
                android:dropDownWidth="fill_parent"
                android:focusable="true"
                android:gravity="center_vertical"
                android:hint="@string/homeActivity_autoComplete"
                android:imeActionId="@+id/home_search_button"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:nextFocusLeft="@id/home_search_button"
                android:paddingRight="35.0dip"
                android:singleLine="true"
                android:textColor="@color/search_title_text_color"
                android:textColorHint="@color/search_title_hint_text_color"
                android:textSize="15.0sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/search_btn"
            style="@style/title_right_button"
            android:layout_width="40dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5.0dip"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="5.0dip"
            android:src="@drawable/android_search_icon"
            android:text="@string/search"
            android:textColor="@color/common_title_text_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/product_list_search_float_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header"
        android:background="@color/search_hotword_bg"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/search_hotword_bg"
            android:orientation="vertical"
            android:id="@+id/search_history_title">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/search_hotword_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="34.0dip"
                    android:background="@color/search_hotword_bg"
                    android:gravity="center|left"
                    android:paddingLeft="10.0dip"
                    android:text="历史搜索"
                    android:textColor="@color/search_hotword_hint"
                    android:textSize="16.0sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:background="@color/search_hotword_divider" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/search_history_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@null"
            android:focusableInTouchMode="false"
            android:listSelector="@android:color/transparent"
            android:layout_below="@id/search_history_title"
            android:layout_above="@+id/del_history_button"/>

        <Button
            android:id="@+id/del_history_button"
            android:layout_width="fill_parent"
            android:layout_height="42.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="35.0dip"
            android:layout_marginRight="35.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/button_c"
            android:gravity="center"
            android:text="@string/del_search_history"
            android:textColor="@color/del_search_history_textcolor"
            android:textSize="15.0sp"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>
</RelativeLayout>