<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/c_F8F8F8">

    <FrameLayout
        android:id="@+id/fill_order_title"
        android:layout_width="fill_parent"
        android:layout_height="49.0dip"
        android:background="@drawable/common_title_background"
        android:fadingEdge="none">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:paddingLeft="15.0dip"
            android:paddingRight="5.0dip"
            android:src="@drawable/common_title_back_selector" />

        <TextView
            style="@style/common_layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10.0dip"
            android:singleLine="true"
            android:text="订单提交成功" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/regist_scroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/fill_order_title">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/color_f3f5f7"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/oreder_complete_no_data"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/order_complete_no_data_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30.0dip"
                    android:src="@drawable/order_complete_no_data_image" />

                <TextView
                    android:id="@+id/oreder_complete_no_data_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24.0dip"
                    android:textColor="@color/c_252525"
                    android:textSize="18.0sp" android:text="恭喜您，订单提交成功"/>

                <TextView
                    android:id="@+id/oreder_complete_no_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="11.0dip"
                    android:gravity="center_horizontal"
                    android:textColor="@color/c_848689"
                    android:textSize="14.0sp" android:text="我们将尽快为您安排配送"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="28.0dip" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/submit_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <RelativeLayout
                    android:id="@+id/submit_complete_order_info_single"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/order_no_rl"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip">

                        <ImageView
                            android:id="@+id/order_header_line"
                            android:layout_width="fill_parent"
                            android:layout_height="0.5dip"
                            android:gravity="center_horizontal"
                            android:paddingLeft="10.0dip"
                            android:src="@color/address_line_h" />

                        <TextView
                            android:id="@+id/order_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="10.0dip"
                            android:text="@string/fill_order_current_order_id"
                            android:textColor="@color/fill_order_delivery_normal"
                            android:textSize="15.0sp" />

                        <TextView
                            android:id="@+id/order_no_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_toRightOf="@id/order_no"
                            android:textColor="@color/fill_order_virtual_text_color"
                            android:textSize="14.0sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/pay_money_rl"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip"
                        android:layout_below="@id/order_no_rl">

                        <ImageView
                            android:id="@+id/pay_money_line"
                            android:layout_width="fill_parent"
                            android:layout_height="0.5dip"
                            android:gravity="center_horizontal"
                            android:paddingLeft="10.0dip"
                            android:src="@color/address_line_h" />

                        <TextView
                            android:id="@+id/pay_money"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:text="@string/fill_order_current_order_menoy"
                            android:textColor="@color/fill_order_delivery_normal"
                            android:textSize="15.0sp" />

                        <TextView
                            android:id="@+id/pay_money_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_toRightOf="@id/pay_money"
                            android:textColor="@color/color_f15353"
                            android:textSize="14.0sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/pay_way_rl"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip"
                        android:layout_below="@id/pay_money_rl">

                        <ImageView
                            android:id="@+id/pay_way_line"
                            android:layout_width="fill_parent"
                            android:layout_height="0.5dip"
                            android:gravity="center_horizontal"
                            android:paddingLeft="10.0dip"
                            android:src="@color/address_line_h" />

                        <TextView
                            android:id="@+id/pay_way"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10.0dip"
                            android:layout_marginLeft="10.0dip"
                            android:text="@string/fill_order_current_order_paytype"
                            android:textColor="@color/fill_order_delivery_normal"
                            android:textSize="15.0sp" />

                        <TextView
                            android:id="@+id/pay_way_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_toRightOf="@id/pay_way"
                            android:textColor="@color/fill_order_virtual_text_color"
                            android:textSize="14.0sp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/submit_completed"
                        android:layout_width="fill_parent"
                        android:layout_height="68.0dip"
                        android:layout_below="@id/pay_way_rl"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="0.5dip"
                            android:gravity="center_horizontal"
                            android:paddingLeft="10.0dip"
                            android:src="@color/fill_order_delivery_split_line" />

                        <Button
                            android:id="@+id/submit_completed_btn"
                            android:layout_width="fill_parent"
                            android:layout_height="45.0dip"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="70.0dip"
                            android:layout_marginRight="70.0dip"
                            android:background="@drawable/button_b"
                            android:text="@string/completed"
                            android:textColor="@color/c_FFFFFF"
                            android:textSize="15.0sp" />
                    </RelativeLayout>


                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>